# url-shortener-api

./: .gitignore  Makefile  pyproject.toml
src/url_shortener/handlers/: create_link.py  redirect_link.py
src/url_shortener/models/: link.py
src/url_shortener/repositories/: dynamodb_link_repository.py  in_memory_link_repository.py  link_repository.py
src/url_shortener/services/: link_service.py
src/url_shortener/shared/: config.py  dependencies.py  errors.py  logger.py  requests.py  response.py  validation.py
tests/unit/: test_handlers.py  test_link_service.py  test_validation.py
