[project]
name = "severless-url-shortener"
version = "0.1.0"
description = "Severless URL shortener API built with AWS Lambda, API Gateway, DynamoDB, Terraform and GitHub Actions."
requires-python = ">=3.12"
dependencies = ["boto3>=1.34.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["url_shortener*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]